Update on Overleaf.

--- a/refs.bib
+++ b/refs.bib
@@ -11834,3 +11834,54 @@
     author = {Malloy, Brian A},
     keywords = {black-box testing, context-free grammar, implementa-, ing, parsing, re-engineering, structural-based testing, tion-based testing, white-box test-}
 }
+
+@article{Burgess1996,
+    title = {{The automatic generation of test cases for optimizing {\{}Fortran{\}} compilers}},
+    year = {1996},
+    journal = {Information and Software Technology},
+    author = {Burgess, C J and Saidi, M},
+    number = {2},
+    pages = {111--119},
+    volume = {38},
+    url = {http://www.sciencedirect.com/science/article/pii/0950584995010556},
+    doi = {http://dx.doi.org/10.1016/0950-5849(95)01055-6},
+    issn = {0950-5849},
+    keywords = {Automated testing, Compiler testing, Test cases}
+}
+
+@article{Purdom1972,
+    title = {{A Sentence Generator for Testing Parsers}},
+    year = {1972},
+    journal = {BIT Numerical Mathematics},
+    author = {Purdom, P.},
+    number = {3},
+    volume = {12}
+}
+
+@inproceedings{Zhao2009,
+    title = {{Automated Test Program Generation for an Industrial Optimizing Compiler}},
+    year = {2009},
+    booktitle = {AST},
+    author = {Zhao, C. and Xue, Y. and Tao, Q. and Guo, L. and Wang, Z.}
+}
+
+@misc{Bryan2007,
+    title = {{Random C program generator}},
+    year = {2007},
+    author = {Bryan, T.}
+}
+
+@article{Holler2012,
+    title = {{Fuzzing with Code Fragments}},
+    year = {2012},
+    journal = {Usenix},
+    author = {Holler, C. and Herzig, K. and Zeller, A.},
+    keywords = {fuzz testing, grammar, security, security testing}
+}
+
+@inproceedings{Bardsley2014,
+    title = {{Engineering a Static Verification Tool for GPU Kernels}},
+    year = {2014},
+    booktitle = {CAV},
+    author = {Bardsley, E. and Betts, A. and Chong, N. and Collingbourne, P. and Deligiannis, P. and Donaldson, A. and Ketema, J. and Liew, D. and Qadeer, S.}
+}
