--- a/sec/related_work.tex
+++ b/sec/related_work.tex
@@ -32,11 +32,17 @@ Both tools require test case reduction (\cite{Regehr2012a} and~\cite{Pflanzer201
 
 EMI testing~\cite{Le2013a}, Skeletal Program enumeration~\cite{Zhang2017a}.
 
+Fuzzing with code fragments~\cite{Holler2012}.
+
 A mutation-based approach for the Java Virtual Machine is demonstrated in~\cite{Chena}.
 
 TODO~\cite{White2016}.
 
+Grammar-base whitebox testing~\cite{Godefroid2008a}.
+
 \paragraph{GPU Testing} GPU Concurrency --- Small \emph{litmus tests}~\cite{Alglave2015}.
+
+GPUVerify~\cite{Bardsley2014}.
 
 
 \paragraph{Machine Learning} Deep Learning is a nascent field that is responsible for a multitude of breakthroughs in modeling rich, hierarchical datasets. The major milestones are reviewed in~\cite{Wang2017}, and methods in~\cite{Schmidhuber2014}.
