--- a/sec/intro.tex
+++ b/sec/intro.tex
@@ -22,7 +22,9 @@ Optimizing compilers are large and complex programs, with a practically infinite
 
 Differential Testing is an effective and widely studied methodology for identifying compiler bugs~\cite{Chen2014a,Kossatchev2005,Chen2013}. Figure~\ref{fig:difftest} shows the approach. A \emph{test case}, that is, a program code and any data required to execute it, is compiled and executed a cross a number of \emph{testbeds} (a <compiler, hardware> pair). If any of the compilers crash or loop indefinitely, or if the output of the programs differs between compilers, then a potential bug has been discovered. A probabilistic grammar is used to enumerate a large, random program, which is then compiled and executed across a number of compilers. In this manner, CSmith~\cite{Yang2011}, a random program generator for the C programming language, has been used to identify hundreds of bugs in compilers. CSmith defines a probabilistic grammar over a large subset of the C programming language, and recursively instantiates a program, using rigorous and conservative static and dynamic analysis to ensure that programs are free from undefined behavior.
 
-Early work in context free grammar enumeration to text syntax analyzers~\cite{Malloy2001}.
+Early work in context free grammar enumeration to text syntax analyzers~\cite{Purdom1972,Malloy2001}.
+
+Early program generators~\cite{Zhao2009},\cite{Bryan2007}.
 
 Developing a random program generation is a huge undertaking, requiring a deep understanding of the target programming language -- CSmith was developed over the course of years, and consists of over 40k lines of handwritten C++ code. By tightly coupling the generation logic with the target programming language, each feature of the grammar must be painstakingly and expertly engineered, and is accompanied by exponential costs in developing the static and dynamic safety checks to ensure that generated programs remain free from (or at least, are likely free from) undefined behavior. For example, lifting CSmith from C to OpenCL~\cite{Lidbury2015a} took 9 months and 8k lines of code. As such, typically only a subset of the language is implemented, and the expressiveness of the grammar is bounded by the limits of static and dynamic analysis.
 % --- to date, important language features such as strings, dynamic memory allocation, function pointers, and recursion are unsupported.
