--- a/difftest/Difftest Results.ipynb
+++ b/difftest/Difftest Results.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "'mysql://cc1:3306/project_b'"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,14 +88,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1KCLgen Oclgrind Simulator opt results: 133602 time: 81.7 hrshrsrs9 hrshrsscached now (2017-08-04 21:45:53.473059)\n"
+      "cached 18 hours ago (2017-08-04 21:45:53.473059)\n"
      ]
     },
     {
@@ -430,7 +430,7 @@
        "19         133602  "
       ]
      },
-     "execution_count": 117,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -704,9 +704,17 @@
      "output_type": "stream",
      "text": [
       "Current branch master is up to date.\n",
-      "On branch master\n",
-      "Your branch is up-to-date with 'origin/master'.\n",
-      "nothing to commit, working directory clean\n"
+      "[master dfadbd1] auto: build/tab/platforms.tex\n",
+      " 1 file changed, 4 insertions(+), 4 deletions(-)\n",
+      "Counting objects: 5, done.\n",
+      "Delta compression using up to 16 threads.\n",
+      "Compressing objects: 100% (5/5), done.\n",
+      "Writing objects: 100% (5/5), 472 bytes | 0 bytes/s, done.\n",
+      "Total 5 (delta 3), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (3/3)\u001b[K\u001b[K\n",
+      "remote: Updating references: 100% (1/1)\u001b[K\u001b[K\n",
+      "To https://git.overleaf.com/8608915dsywxshwwjmw\n",
+      "   35b7078..dfadbd1  master -> master\n"
      ]
     },
     {
@@ -750,13 +758,13 @@
        "      <td>1.2</td>\n",
        "      <td>openSUSE  13.1 64bit</td>\n",
        "      <td>GPU</td>\n",
-       "      <td>169 hours</td>\n",
-       "      <td>0</td>\n",
+       "      <td>168 hours</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>Intel Gen OCL Driver</td>\n",
+       "      <td>Beignet</td>\n",
        "      <td>Intel HD Haswell GT2</td>\n",
        "      <td>1.3</td>\n",
        "      <td>1.2</td>\n",
@@ -822,7 +830,7 @@
        "      <td>2.0</td>\n",
        "      <td>Ubuntu 16.04 64bit</td>\n",
        "      <td>CPU</td>\n",
-       "      <td>181 hours</td>\n",
+       "      <td>180 hours</td>\n",
        "      <td>22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -847,39 +855,39 @@
        "      <td>Ubuntu 16.04 64bit</td>\n",
        "      <td>Emulator</td>\n",
        "      <td>174 hours</td>\n",
-       "      <td>5</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   #.              Platform                        Device    Driver OpenCL  \\\n",
-       "0   1           NVIDIA CUDA              GeForce GTX 1080    375.39    1.2   \n",
-       "1   2           NVIDIA CUDA               GeForce GTX 780    361.42    1.2   \n",
-       "2   3  Intel Gen OCL Driver          Intel HD Haswell GT2       1.3    1.2   \n",
-       "3   4          Intel OpenCL              Intel E5-2620 v4  1.2.0.25    2.0   \n",
-       "4   5          Intel OpenCL              Intel E5-2650 v2  1.2.0.44    1.2   \n",
-       "5   6          Intel OpenCL                 Intel i5-4570  1.2.0.25    1.2   \n",
-       "6   7          Intel OpenCL                Intel Xeon Phi       1.2    1.2   \n",
-       "7   8                  POCL          POCL (Intel E5-2620)      0.14    2.0   \n",
-       "8   9          ComputeAorta  ComputeAorta (Intel E5-2620)      1.14    1.2   \n",
-       "9  10              Oclgrind            Oclgrind Simulator     16.10    1.2   \n",
+       "   #.      Platform                        Device    Driver OpenCL  \\\n",
+       "0   1   NVIDIA CUDA              GeForce GTX 1080    375.39    1.2   \n",
+       "1   2   NVIDIA CUDA               GeForce GTX 780    361.42    1.2   \n",
+       "2   3       Beignet          Intel HD Haswell GT2       1.3    1.2   \n",
+       "3   4  Intel OpenCL              Intel E5-2620 v4  1.2.0.25    2.0   \n",
+       "4   5  Intel OpenCL              Intel E5-2650 v2  1.2.0.44    1.2   \n",
+       "5   6  Intel OpenCL                 Intel i5-4570  1.2.0.25    1.2   \n",
+       "6   7  Intel OpenCL                Intel Xeon Phi       1.2    1.2   \n",
+       "7   8          POCL          POCL (Intel E5-2620)      0.14    2.0   \n",
+       "8   9  ComputeAorta  ComputeAorta (Intel E5-2620)      1.14    1.2   \n",
+       "9  10      Oclgrind            Oclgrind Simulator     16.10    1.2   \n",
        "\n",
        "       Operating system  Device type Testing time  B.R. Submitted  \n",
        "0    Ubuntu 16.04 64bit          GPU    187 hours               8  \n",
-       "1  openSUSE  13.1 64bit          GPU    169 hours               0  \n",
+       "1  openSUSE  13.1 64bit          GPU    168 hours               1  \n",
        "2    Ubuntu 16.04 64bit          GPU    108 hours              12  \n",
        "3    Ubuntu 16.04 64bit          CPU    129 hours               6  \n",
        "4      CentOS 7.1 64bit          CPU    173 hours               1  \n",
        "5    Ubuntu 16.04 64bit          CPU    133 hours               5  \n",
        "6      CentOS 7.1 64bit  Accelerator    171 hours               3  \n",
-       "7    Ubuntu 16.04 64bit          CPU    181 hours              22  \n",
+       "7    Ubuntu 16.04 64bit          CPU    180 hours              22  \n",
        "8    Ubuntu 16.04 64bit          CPU    131 hours               1  \n",
-       "9    Ubuntu 16.04 64bit     Emulator    174 hours               5  "
+       "9    Ubuntu 16.04 64bit     Emulator    174 hours               6  "
       ]
      },
-     "execution_count": 135,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
