--- a/sec/vs_clsmith.tex
+++ b/sec/vs_clsmith.tex
@@ -1,3 +1,26 @@
+\section{XXX: Progression over time}\label{sec:clangs}
+
+
+\begin{figure}
+  \centering %
+  \includegraphics[width=.75\columnwidth]{build/img/clang-crashes}%
+  \caption{%
+    Crash rate of Clang frontend over 75k DeepSmith kernels using the last XX LLVM releases. 2 years of development has lead to a tenfold decrease in crash rate.%
+  }%
+  \label{fig:runtimes} %
+\end{figure}
+
+
+\begin{figure}
+  \centering %
+  \includegraphics[width=.75\columnwidth]{build/img/clang-num-crashes}%
+  \caption{%
+    Distinct crash rate of Clang frontend over 75k DeepSmith kernels using the last XX LLVM releases. 2 years of development has lead to a tenfold decrease in crash rate.%
+  }%
+  \label{fig:runtimes} %
+\end{figure}
+
+
 \section{Comparison to State-of-the-art}\label{sec:vs_clsmith}
 
 In this section we compare DeepSmith to CLSmith~\cite{Lidbury2015a}, the state-of-the-art in OpenCL compiler testing.
