--- a/sec/vs_clsmith.tex
+++ b/sec/vs_clsmith.tex
@@ -1,23 +1,17 @@
 \section{XXX: Progression over time}\label{sec:clangs}
 
 
-\begin{figure}
-  \centering %
-  \includegraphics[width=.75\columnwidth]{build/img/clang-crashes}%
-  \caption{%
-    Crash rate of Clang frontend over 75k DeepSmith kernels using the last XX LLVM releases. 2 years of development has lead to a tenfold decrease in crash rate.%
-  }%
-  \label{fig:runtimes} %
-\end{figure}
-
 
 \begin{figure}
   \centering %
-  \includegraphics[width=.75\columnwidth]{build/img/clang-num-crashes}%
-  \caption{%
-    Distinct crash rate of Clang frontend over 75k DeepSmith kernels using the last XX LLVM releases. 2 years of development has lead to a tenfold decrease in crash rate.%
-  }%
-  \label{fig:runtimes} %
+  \subfloat[][Crash rate]{%
+    \includegraphics[width=.9\columnwidth]{build/img/clang-crashes}%
+    \label{fig:clang-crash-rate}}\\%
+  \subfloat[][Distinct crashes]{%
+    \includegraphics[width=.9\columnwidth]{build/img/clang-num-crashes}%
+    \label{fig:clang-distinct-crashes}}%
+  \caption{Crash rate and distinct of Clang frontend over 75k DeepSmith kernels using recent LLVM releases. 2 years of development has lead to a tenfold decrease in crash rate.}%
+  \label{fig:npb} %
 \end{figure}
 
 
