--- a/sec/vs_clsmith.tex
+++ b/sec/vs_clsmith.tex
@@ -1,17 +1,19 @@
 \section{XXX: Progression over time}\label{sec:clangs}
 
-
+TODO: Using the clang frontend, compile 75,000 DeepSmith kernels. Figure~\ref{fig:clangs}.
 
 \begin{figure}
   \centering %
-  \subfloat[][Crash rate]{%
+  \subfloat[][Crash error rate]{%
     \includegraphics[width=.9\columnwidth]{build/img/clang-crashes}%
     \label{fig:clang-crash-rate}}\\%
   \subfloat[][Distinct crashes]{%
     \includegraphics[width=.9\columnwidth]{build/img/clang-num-crashes}%
     \label{fig:clang-distinct-crashes}}%
-  \caption{Crash rate and distinct of Clang frontend over 75k DeepSmith kernels using recent LLVM releases. 2 years of development has lead to a tenfold decrease in crash rate.}%
-  \label{fig:npb} %
+  \caption{%
+    Clang frontend errors from 75k DeepSmith programs using recent LLVM releases.% 2 years of development has lead to a tenfold decrease in crash rate.
+  }%
+  \label{fig:clangs} %
 \end{figure}
 
 
