--- a/paper.tex
+++ b/paper.tex
@@ -15,8 +15,7 @@
 \input{sec/overview}
 \input{sec/deepsmith}
 \input{sec/methodology}
-\input{sec/bugs}
-\input{sec/vs_clsmith}
+\input{sec/eval}
 \input{sec/related_work}
 \input{sec/conclusion}
 
