Update on Overleaf.

--- a/refs.bib
+++ b/refs.bib
@@ -11885,3 +11885,13 @@
     booktitle = {CAV},
     author = {Bardsley, E. and Betts, A. and Chong, N. and Collingbourne, P. and Deligiannis, P. and Donaldson, A. and Ketema, J. and Liew, D. and Qadeer, S.}
 }
+
+@article{Sheridan2007,
+    title = {{Practical Testing of a C99 Compiler Using Output Comparison}},
+    year = {2007},
+    journal = {Software: Practice and Experience},
+    author = {Sheridan, F.},
+    number = {14},
+    volume = {37},
+    publisher = {Wiley Online Library}
+}
